--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Lemonade</string>
+    <string name="lemon_tree_string">Tap the lemon tree to select a lemon</string>
+    <string name="lemon_string">Keep tapping the lemon to squeeze it</string>
+    <string name="full_glass_string">Tap the lemonade to squeeze it</string>
+    <string name="empty_glass_string">Tap the empty glass to start again</string>
 </resources>
