--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="lemon_string">Keep tapping the lemon to squeeze it</string>
     <string name="full_glass_string">Tap the lemonade to drink it</string>
     <string name="empty_glass_string">Tap the empty glass to start again</string>
+    <string name="top_app_bar">Lemonade</string>
 </resources>
